# NutraGoalCalc

./: .env.example  .gitignore  README.md  nutrition-values.json  pyproject.toml
docs/: api-usage.md
frontend/: PLAN.md  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CalendarGrid.tsx  CategoryBadge.tsx  CategoryFilter.tsx  DayDetail.tsx  ErrorBanner.tsx  FoodCard.tsx  FoodForm.tsx  FoodPicker.tsx  ItemsBreakdown.tsx  ItemsTable.tsx  NutrientBar.tsx  NutrientPreviewModal.tsx  RecipeImportModal.tsx  ResultsPanel.tsx  ThemeToggle.tsx  WeightInputModal.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx  skeleton.tsx
frontend/src/hooks/: useDebouncedCalculate.ts  useFoods.ts  useTargets.ts  useTheme.ts
frontend/src/lib/: api.ts  colors.ts  diary.ts  format.ts  storage.ts  target-calculator.ts  types.ts
frontend/src/pages/: CustomFoodsPage.tsx  DiaryPage.tsx  HomePage.tsx
src/nvc/: __init__.py  config.py  database.py  dependencies.py  main.py
src/nvc/llm/: __init__.py  ollama_adapter.py  openai_adapter.py  protocol.py
src/nvc/models/: __init__.py  api.py  catalogue.py
src/nvc/repositories/: __init__.py  json_repository.py  protocol.py  sql_repository.py
src/nvc/routers/: __init__.py  calculate.py  foods.py  health.py  recipe.py  targets.py
src/nvc/services/: __init__.py  calculator.py  protocol.py
tests/: conftest.py  test_calculator.py  test_routes.py
